button fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -630,9 +630,6 @@ video {
 .h-16 {
 	height: 4rem;
 }
-.h-32 {
-	height: 8rem;
-}
 .w-screen {
 	width: 100vw;
 }
@@ -645,14 +642,23 @@ video {
 .w-24 {
 	width: 6rem;
 }
-.w-32 {
-	width: 8rem;
+.w-1\/2 {
+	width: 50%;
 }
 .w-2\/3 {
 	width: 66.666667%;
 }
 .w-1\/3 {
 	width: 33.333333%;
+}
+.w-\[\] {
+	width: ;
+}
+.w-\[90\%\] {
+	width: 90%;
+}
+.w-\[95\%\] {
+	width: 95%;
 }
 .cursor-pointer {
 	cursor: pointer;
@@ -711,6 +717,10 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(20, 33, 61, var(--tw-bg-opacity));
 }
+.bg-white {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
 .bg-black {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
@@ -742,13 +752,17 @@ video {
 .font-bold {
 	font-weight: 700;
 }
-.text-blue-400 {
-	--tw-text-opacity: 1;
-	color: rgba(96, 165, 250, var(--tw-text-opacity));
-}
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.text-black {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+.text-blue-400 {
+	--tw-text-opacity: 1;
+	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
 .shadow-2xl {
 	--tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
